--- a/src/application/Menu.fxml
+++ b/src/application/Menu.fxml
@@ -26,10 +26,11 @@
             <Font name="BoulderDash6128" size="56.0" />
          </font>
       </Button>
-      <Button fx:id="quitter" layoutX="158.0" layoutY="604.0" mnemonicParsing="false" onAction="#quit" onMouseExited="#mouseExited" onMouseMoved="#mouseMoved" prefHeight="111.0" prefWidth="621.0" style="-fx-font-family: BoulderDash6128; -fx-font-size: 70;" stylesheets="@Bouton.css" text="Quitter" textFill="WHITE">
+      <Button fx:id="quitter" layoutX="153.0" layoutY="747.0" mnemonicParsing="false" onAction="#quit" onMouseExited="#mouseExited" onMouseMoved="#mouseMoved" prefHeight="111.0" prefWidth="621.0" style="-fx-font-family: BoulderDash6128; -fx-font-size: 70;" stylesheets="@Bouton.css" text="Quitter" textFill="WHITE">
          <font>
             <Font name="BoulderDash6128" size="56.0" />
          </font>
       </Button>
+      <Button fx:id="menu" layoutX="180.0" layoutY="580.0" mnemonicParsing="false" onAction="#goMenu" onMouseExited="#mouseExited" onMouseMoved="#mouseMoved" style="-fx-font-family: BoulderDash6128; -fx-font-size: 70;" stylesheets="@Bouton.css" text="Retour au menu" textFill="WHITE" />
    </children>
 </Pane>
