--- a/src/application/EcranDefaite.fxml
+++ b/src/application/EcranDefaite.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1920.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text fill="RED" layoutX="735.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: BoulderDash6128; -fx-font-size: 70;" text="Defaite" />
+      <Text fill="RED" layoutX="672.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: BoulderDash6128; -fx-font-size: 70;" text="Game over" />
       <Button fx:id="recommencer" layoutX="176.0" layoutY="322.0" mnemonicParsing="false" onAction="#restart" onMouseExited="#mouseExited" onMouseMoved="#mouseMoved" prefHeight="111.0" prefWidth="896.0" style="-fx-font-family: BoulderDash6128; -fx-font-size: 70;" stylesheets="@Bouton.css" text="Recommencer" textFill="WHITE">
          <font>
             <Font name="BoulderDash6128" size="56.0" />
